--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -38,6 +38,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: prod.Dockerfile
           push: true
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
