--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 REACT_APP_ENV=production
 
 # For all environments
-REACT_APP_GATEWAY_URL=https://safe-client-gateway.ys.finance/
+REACT_APP_GATEWAY_URL=https://safe-client-gateway.multisig.findora.org/
 REACT_APP_GOOGLE_ANALYTICS=
 REACT_APP_INFURA_TOKEN=
 REACT_APP_IPFS_GATEWAY=https://ipfs.io/ipfs
